--- a/src/css/style.css
+++ b/src/css/style.css
@@ -770,7 +770,7 @@ a {
 
 /* ===== # Hero ===== */
 .hero-inner {
-    height: calc(100vh + 36px);
+    height: 100vh;
     padding: 0 72px 40px;
     display: flex;
     flex-direction: column;
@@ -896,6 +896,8 @@ a {
     display: flex;
     width: 100%;
     align-items: flex-end;
+    position: relative;
+    top: -100px;
 }
 
 /* # About Hero */
